src/test/compile-fail/bad-value-ident-true.rs
fn true() { } //~ ERROR found `true` in restricted position
fn main() { }